@@ -1,3 +1,6 @@
+28-10-2004 Qball <Qball@qballcow.nl>
+	* src/playlist3.c:	Added clear/shuffle/info option
+
 25-10-2004 Qball <Qball@qballcow.nl>
 	* src/playlist3.c:	Moved code around, improved function naming.
 	* src/playlist3.c:	Added replacing in the right mouse menu for
